frontend/src/styles/components/movie-card.scss
$color-white: #fff;
$color-black: #000;

$transition-time: 250ms;
$transition-method: ease-in-out;

$card-height: 440px;
$card-width: 840px;
$card-hover-offset-x: 40px;
$card-hover-offset-y: 60px;

%clearfix {
  &:after {
    clear: both;
    content: "";
    display: table;
  }
  // &:after
}
// %clearfix

.card-movie-wrapper {
  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
  height: $card-height;
  position: relative;
  width: $card-width;

  &:hover {
    .card-movie-carousel {
      transition: all $transition-time $transition-method;
      bottom: $card-hover-offset-y;
      right: $card-hover-offset-x;
    }
    // .card-movie-carousel
  }
  // &:hover
}
// .card-movie-wrapper

.card-movie-wrapper--centered {
  transform: translate(-50%, -50%);
  left: 50%;
  position: absolute;
  top: 50%;
  border-radius: 10px;
  overflow: hidden;
}
// .card-movie-wrapper--centered

.card-movie-carousel {
  transition: all $transition-time $transition-method 250ms;
  height: $card-height;
  width: $card-width;
  position: absolute;
  bottom: 0;
  right: 0;
  overflow: hidden;
}

.card-movie-navigation {
  background-color: $color-white;
  bottom: 0;
  height: 100%;
  overflow: hidden;
  position: absolute;
  right: 0;
  width: 100%;
  z-index: 15;

  &__list {
    $item-size: 12px;
    $item-size-active: $item-size * 1.5;
    transform: translateY(-50%);
    position: absolute;
    right: ($card-hover-offset-x - $item-size) / 2;
    top: 50%;
    width: $item-size-active;

    li {
      transition: all $transition-time $transition-method;
      background-color: #ccc;
      border-radius: 100%;
      cursor: pointer;
      height: $item-size;
      margin: 0 auto $item-size/2;
      width: $item-size;

      &:last-child {
        margin-bottom: 0;
      }
      // &:last-child

      &.is-active {
        height: $item-size-active;
        width: $item-size-active;
      }
      // &.is-active

      &:hover {
        background-color: #bbb;
      }
      // &:hover
    }
    // li
  }
  // &__list

  button {
    $arrow-size: 6px;
    appearance: none;
    background-color: transparent;
    border: none;
    bottom: 0;
    color: #aac8ca;
    cursor: pointer;
    font-size: 14px;
    line-height: $card-hover-offset-y;
    margin: 0;
    outline: none;
    padding: 0;
    position: absolute;
    right: $card-hover-offset-x;

    &:before {
      content: "Watch Trailer";
    }
    // &:before

    &:after {
      transform: translateY(-50%);
      border-bottom: $arrow-size solid transparent;
      border-left: $arrow-size solid #dce9e9;
      border-top: $arrow-size solid transparent;
      content: "";
      height: 0;
      margin-right: $arrow-size;
      position: absolute;
      right: 100%;
      top: 50%;
      width: 0;
    }
    // &:after

    &.is-playing {
      &:before {
        content: "Hide Trailer";
      }
      // &:before

      &:after {
        transform: rotate(-90deg);
        margin-top: -$arrow-size;
      }
      // &:after
    }
    // &.is-playing
  }
  // button
}
// .card-movie-navigation

.card-movie {
  transition: all ($transition-time * 2) $transition-method;
  background-size: cover;
  bottom: 0;
  height: 100%;
  overflow: hidden;
  position: absolute;
  right: 0;
  opacity: 0;
  width: 100%;
  z-index: 20;

  &__img {
    height: $card-height;
  }

  &__content {
    left: 350px;
    position: absolute;
    top: 120px;
  }
  // &__content

  &__title {
    font-size: 60px;
    font-weight: 700;
    line-height: 1;
    margin-left: -4px;
    text-transform: uppercase;
  }
  // &__title

  &__details {
    @extend %clearfix;
    margin-bottom: 15px;
    margin-top: 15px;

    &-item {
      display: block;
      float: left;
      margin-right: 20px;
    }
    // &-item

    &-list {
      @extend %clearfix;

      li {
        float: left;
        margin-right: 5px;
        padding-right: 6px;
        position: relative;

        &:after {
          content: "|";
          position: absolute;
          right: 0;
        }
        // &:after

        &:last-child {
          margin-right: 0;

          &:after {
            display: none;
          }
          // &:after
        }
        // &:last-child
      }
      // li
    }
    // &-list
  }
  // &__details

  &__description {
    font-size: 14px;
    max-width: 390px;
  }
  // &__description

  &__rating {
    $size: 50px;
    bottom: $size/3;
    font-size: 18px;
    font-weight: 700;
    line-height: $size;
    position: absolute;
    right: $size/3;
    text-align: center;
    width: $size;

    &:after {
      border-radius: 100%;
      border: 2px solid #ee927b;
      content: "";
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
    }
    // &:after
  }
  // &__rating

  &__player {
    transition: all ($transition-time * 2) $transition-method;
    transform: translate(-50%, -50%);
    height: 0;
    left: 50%;
    position: absolute;
    top: 50%;
    width: 0;
    z-index: 20;

    .card-movie--playing & {
      height: $card-height;
      width: $card-width;
    }
    // .card-movie--playing &

    iframe {
      height: 100%;
      width: 100%;
    }
    // iframe
  }
  // &__player
}
// .card-movie

.card-movie--active {
  opacity: 1;
  z-index: 25;
}
// .card-movie--active

.card-movie--light {
  //   background-color: #effdfd;

  [class*="__title"] {
    color: $color-black;
  }
  // [class*='__title']
}
// .card-movie--light

.card-movie--dark {
  //   background-color: $color-black;
  color: #fff;

  [class*="__title"] {
    color: #fff;
  }
  // [class*='__title']
}
// .card-movie--dark

.card-movie--looper {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/looper.png");
}
// .card-movie--looper

.card-movie--tron {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/tron.png");
}
// .card-movie--tron

.card-movie--interstellar {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/interstellar.png");
  background-color: #fffffa;
}
// .card-movie--interstellar

.card-movie--garden-state {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/garden-state.png");
}
// .card-movie--garden-state

.card-movie--walter-mitty {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/walter-mitty.png");
}
// .card-movie--walter-mitty

.card-movie--cloud-atlas {
  //   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/cloud-atlas.png");
}
// .card-movie--cloud-atlas

